[package]
name = "coinutils-src"
version = "0.1.1+2.11.6"
edition = "2021"
build = "build.rs"
links = "CoinUtils"
license = "Apache-2.0"
description = "The low-level bindings to the COIN-OR CoinUtils library."
repository = "https://github.com/Maroon502/coinutils-src.git"
keywords = ["coin-or", "CoinUtils", "CoinUtils-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]

exclude = [
   "CoinUtils/**/*",
   "!CoinUtils/CoinUtils/src/**/*",
   "!**/LICENSE",
   "!**/AUTHORS",
]

[features]
default = []

[dependencies]

[build-dependencies]
cc = "1.0"
coin-build-tools = { git = "https://github.com/Maroon502/coin-build-tools.git" }
