[package]
name = "coinutils-src"
version = "0.2.9+2.11.12"
edition = "2021"
build = "build.rs"
links = "CoinUtils"
license = "Apache-2.0"
description = "Redistribution of Coin-OR CoinUtils as a crate"
documentation = "https://docs.rs/coinutils-src/"
repository = "https://github.com/Maroon502/coinutils-src.git"
keywords = ["coin-or", "CoinUtils", "CoinUtils-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]

exclude = [
   "CoinUtils/**/*",
   "!CoinUtils/CoinUtils/src/**/*",
   "!**/LICENSE",
   "!**/AUTHORS",
]

[features]
default = []

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
coin-build-tools = "0.2"
