[package]
name = "coinutils-src"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license-file = "../LICENSE"
description = "Build CoinUtils as a crate."
repository = "https://github.com/Maroon502/CoinUtils-src"
keywords = ["coin-or", "CoinUtils", "CoinUtils-src", "CoinUtils-sys"]
readme = "../README.md"
authors = [
    "Maroon"
]
exclude = [
    "CoinUtils/**/*",
    "!CoinUtils/CoinUtils/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = []
system = []
static = []

[dependencies]

[build-dependencies]
cc = "1.0"
vcpkg = "0.2"